--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,7 +7,7 @@
     </ul>
 } -->
 
-
+<h1>Add User</h1>
 <form #userForm="ngForm" (ngSubmit)="addUser( userForm.value)">
   <input type="text" placeholder="Enter Name" name="name" [ngModel]="selectedUser?.name">
   <br><br>
